--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="app_id">1425566607690211</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
 
 
 </resources>
