--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
 
 
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</string>
+    <string name="PREF_PLEGO">plegoSharedPref</string>
+    <string name="USER_FACEBOOK_ID">myFBUserID</string>
 
     <string-array name="leaderboard_filters">
         <item>All Leaderboards</item>
