--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,14 @@
     <string name="PREF_PLEGO">plegoSharedPref</string>
     <string name="USER_FACEBOOK_ID">myFBUserID</string>
     <string name="uri_selected_game_for_betting">Selected Game</string>
+    <string name="loading">Loading..</string>
+    <string name="please_wait">Please Wait...</string>
+    <string name="loading_games">Loading Games..</string>
+    <string name="no_betting_information">No Betting Information</string>
+    <string name="no_betting_information_message">We do not have betting information for this game yet. Please come back later.</string>
+    <string name="ok">Ok</string>
+    <string name="no_games_found">No Games Found!</string>
+    <string name="no_games_found_message">There are no games going on for now. Please come back later.</string>
 
     <string-array name="leaderboard_filters">
         <item>All Leaderboards</item>
