--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="get_dollars_2000">$2,000 \n Virtual Dollars</string>
     <string name="get_dollars_15000">$15,000 \n Virtual Dollars</string>
-    <string name="get_dollars_100000">100,000 \n Virtual Dollars</string>
+    <string name="get_dollars_100000">$100,000 \n Virtual Dollars</string>
     <string name="uri_open_betting_portal_fragment">Open Betting Portal Fragment</string>
     <string name="uri_open_pools_fragment">Open Pools Fragment</string>
     <string name="uri_open_my_pools_fragment">Open My Pools Fragment</string>
